# Mechanica

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: deploy.yml
mechanica/: __main__.py  app.py  settings.json  tests_physics.py
mechanica/core/: expr.py  vec.py
mechanica/engine/: body.py  contacts.py  links.py  world.py
mechanica/interact/: tools.py
mechanica/render/: camera.py  draw.py
mechanica/scene/: presets.py  snapshot.py
mechanica/ui/: panels.py  plots.py  theme.py  widgets.py
physics/: Cargo.toml
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: app.ts  main.ts  style.css
web/src/core/: expr.ts  mathfmt.ts  vec.ts
web/src/engine/: body.ts  contacts.ts  links.ts  world.ts
web/src/interact/: tools.ts
web/src/render/: camera.ts  draw.ts  trail.ts
web/src/scene/: presets.ts  snapshot.ts
web/src/ui/: dom.ts  guide-recipes.ts  guide.ts  icons.ts  inspector.ts  mathedit.ts  overlays.ts  panels.ts  plots.ts  theme.ts
web/tests/: adaptive-quality.test.ts  anchor.test.ts  body-culling.test.ts  collision-chain.test.ts  determinism.test.ts  gravity.test.ts  mathfmt.test.ts  no-rotation.test.ts  physics.test.ts  resting-contact.test.ts  resting-friction.test.ts  selection-delete.test.ts  timeseries-render.test.ts  trail-render.test.ts  trail.test.ts
