[package]
name = "mechanica-physics"
version = "0.1.0"
edition = "2021"
description = "2D rigid-body physics engine for the Mechanica web simulator (compiled to WebAssembly)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Maximum-performance release profile: fat LTO and a single codegen unit let
# LLVM inline across module boundaries (the solver's inner loops call into
# bodies/contacts helpers constantly); this measurably shrinks and speeds up
# the .wasm at the cost of compile time.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
